TGR-953: testcase rbel logs always contained all messages, probably since 2.0.0 release